--- a/open-mp/Makefile
+++ b/open-mp/Makefile
@@ -1,10 +1,9 @@
 CC = gcc
-FILES = main.c
+FILES = main.c matrix.c
 FLAGS = -Wall -fopenmp
 
 all:
 	$(CC) $(FILES) -o a.out $(FLAGS)
-	./a.out
 
 clean:
 	rm *.out
